--- a/.github/workflows/netlify-master.yaml
+++ b/.github/workflows/netlify-master.yaml
@@ -39,15 +39,14 @@ jobs:
         touch .env;
 
     - name: Deploy to netlify
-      steps:
-        - uses: jsmrcaga/action-netlify-deploy@v1.1.0
-          with:
-            NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-            NETLIFY_SITE_ID: f305c59b-b987-4df2-b540-c8a5ef30be29
-            build_directory: "build"
-            install_command: ""
-            build_command: ""
-            NETLIFY_DEPLOY_TO_PROD: true
+      uses: jsmrcaga/action-netlify-deploy@v1.1.0
+      with:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: f305c59b-b987-4df2-b540-c8a5ef30be29
+        build_directory: "build"
+        install_command: ""
+        build_command: ""
+        NETLIFY_DEPLOY_TO_PROD: true
 
     - name: Cache Python virtualenvs
       uses: actions/cache@v2
