--- a/.github/workflows/netlify-prs.yaml
+++ b/.github/workflows/netlify-prs.yaml
@@ -38,18 +38,19 @@ jobs:
         pipenv install --system --deploy --ignore-pipfile;
         touch .env;
 
+    - name: Set branch-name as env var
+      uses: nelonoel/branch-name@v1.0.1
+
     - name: Deploy to netlify
-      steps:
-        - uses: nelonoel/branch-name@v1.0.1
-        - uses: jsmrcaga/action-netlify-deploy@v1.1.0
-          with:
-            NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-            NETLIFY_DEPLOY_TO_PROD: false
-            NETLIFY_SITE_ID: f305c59b-b987-4df2-b540-c8a5ef30be29
-            build_directory: "build"
-            install_command: ""
-            build_command: ""
-            deploy_alias: ${{ env.BRANCH_NAME }}
+      uses: jsmrcaga/action-netlify-deploy@v1.1.0
+      with:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_DEPLOY_TO_PROD: false
+        NETLIFY_SITE_ID: f305c59b-b987-4df2-b540-c8a5ef30be29
+        build_directory: "build"
+        install_command: ""
+        build_command: ""
+        deploy_alias: ${{ env.BRANCH_NAME }}
 
     - name: Status check
       uses: Sibz/github-status-action@v1.1.1
